corrected Flicker fix

--- a/components/navbar/navbar.module.scss
+++ b/components/navbar/navbar.module.scss
@@ -1,5 +1,5 @@
 @import "../../scss/main";
 
 .displayNone {
-    display: none;
+    opacity: 0;
 }
